reorganize iterator, code cleanup